[project]
name = "mmcd-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.0.69",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]
